--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^4.11.0",
     "path": "^0.12.7",
     "pg": "^8.8.0"
   }
