--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "markdown-it": "^13.0.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "path": "^0.12.7",
