--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-it": "^13.0.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
+    "morgan": "^1.10.0",
     "path": "^0.12.7",
     "pg": "^8.8.0"
   },
